@startuml

abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY,int speedX, int speedY)
    + {abstract}function(HeroAircraft heroAircraft):void
}
AbstractFlyingObject <|-- AbstractProp

class PropBlood{
    - {static}increaseHp:int
    + PropBlood(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}
AbstractProp <|-- PropBlood: instantiate

class PropBomb{
    + PropBomb(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}
AbstractProp <|-- PropBomb: instantiate

class PropBullet{
    + PropBullet(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}
AbstractProp <|-- PropBullet: instantiate

class PropBulletPlus{
    + PropBulletPlus(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}
AbstractProp <|-- PropBulletPlus: instantiate

class PropFreeze{
    + PropFreeze(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}
AbstractProp <|-- PropFreeze : instantiate

class PropFactory{
    + AbstractProp createProp(String prop, int locationX, int locationY, int speedX, int speedY):AbstractProp
}
AbstractProp <.. PropFactory : create
@enduml